<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:paddingBottom="60dp"
        tools:context="com.example.ahmedbr.soccer.MainActivity">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@android:color/holo_red_dark"
            android:text="Hello World!"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_layer"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <TextView
                    android:id="@+id/firstPlayer_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_A"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/firstPlayer_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/first_player_goal"
                    android:text="@string/goal"
                    style="@style/button_style" />

                <TextView
                    android:id="@+id/numof_fouls1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/first_player_foul"
                    android:text="@string/foul"
                    style="@style/button_style" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/yellow" />

                    <TextView
                        android:id="@+id/first_player_yellow_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/red" />

                    <TextView
                        android:id="@+id/first_player_red_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="390dp"
                android:background="@color/text_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <TextView
                    android:id="@+id/secondPlayer_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_B"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/secondPlayer_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/second_player_goal"
                    android:text="@string/goal"
                    style="@style/button_style" />

                <TextView
                    android:id="@+id/numof_fouls2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/second_player_foul"
                    android:text="@string/foul"
                    style="@style/button_style" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/yellow" />

                    <TextView
                        android:id="@+id/second_player_yellow_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/red" />

                    <TextView
                        android:id="@+id/second_player_red_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/reset"
            style="@style/button_style" />
    </RelativeLayout>
</ScrollView>